# market-simulation

./: index.html  market-simulation.html
hhah-portal/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
hhah-portal/app/: main.py
hhah-portal/app/api/: templating.py
hhah-portal/app/api/routes/: admin.py  auth.py  care_docs.py  communication.py  dashboard.py  flags.py  notifications.py  patients.py  profile.py  sync.py
hhah-portal/app/core/: audit.py  config.py  deps.py  logging.py  middleware.py  permissions.py  security.py
hhah-portal/app/db/: base.py  session.py
hhah-portal/app/db/migrations/: env.py
hhah-portal/app/models/: __init__.py  admission.py  audit.py  communication.py  document.py  enums.py  flag.py  notification.py  organization.py  patient.py  practitioner.py  signature.py  sync.py  user.py
hhah-portal/app/services/: auth_service.py  communication_service.py  document_service.py  flag_service.py  notification_service.py  patient_service.py  storage.py  sync_service.py
hhah-portal/app/templates/: _base.html  _shell.html
hhah-portal/app/templates/admin/: audit.html  baa.html
hhah-portal/app/templates/auth/: _auth_layout.html  login.html  mfa_challenge.html  mfa_enroll.html  mfa_recovery.html
hhah-portal/app/templates/communication/: detail.html  list.html  new.html
hhah-portal/docs/: RUNBOOK.md
hhah-portal/scripts/: admin_cli.py  seed.py
hhah-portal/tests/: conftest.py  test_auth.py  test_dashboard.py  test_flags.py  test_health.py  test_permissions.py  test_phi_logging.py  test_smoke_routes.py
(+18 files in other folders)
